[package]
name = "cargo-bins"
description = "Lists all installed cargo binaries"
version = "1.1.0"
authors = ["DarkCeptor44"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/DarkCeptor44/cargo-bins"
homepage = "https://docs.rs/cargo-bins"
keywords = ["cargo", "binaries", "list", "installed"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "command-line-utilities",
]

[features]
default = ["color"]
color = ["dep:colored"]

[dependencies]
anyhow = "^1"
clap = { version = "^4.5", features = ["derive"] }
colored = { version = "^3", optional = true }
dirs = "^6"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[package.metadata.docs.rs]
all-features = true
